airquality app and luftdaten app added

--- a/laboite/templates/homepage.html
+++ b/laboite/templates/homepage.html
@@ -21,7 +21,7 @@
                         {% blocktrans %}
                         laboîte est une horloge connectée qui affiche des
                         informations provenant d'Internet. Elle est peu coûteuse,
-                        totalement paramétrable et améliorée par une équipe de
+                        totalement paramétrable sur lenuage.io et améliorée par une équipe de
                         passionnés !
                         {% endblocktrans %}
                     </p>
@@ -58,7 +58,7 @@
                     <img class="img-circle" src="{% static 'img/opensource.svg' %}" alt="Visualisation" style="width: 100px; height: 100px;"><br>
                     <h2>{% blocktrans %}Ouvert !{% endblocktrans %}</h2>
                     {% blocktrans %}
-                    Le code de cette application web est ouvert et libre. Il est disponible <a href="https://github.com/laboiteproject/laboite-backend">ici</a> sous licence <a href="https://www.gnu.org/licenses/agpl-3.0.html">AGPLv3</a>
+                    Le code de cette application web est ouvert et libre. Il est disponible <a href="https://github.com/laboiteproject/lenuage">ici</a> sous licence <a href="https://www.gnu.org/licenses/agpl-3.0.html">AGPLv3</a>
                     {% endblocktrans %}
                 </div>
             </div>
