app description changed

--- a/laboite/apps/luftdaten/templates/luftdaten_app.html
+++ b/laboite/apps/luftdaten/templates/luftdaten_app.html
@@ -6,4 +6,4 @@
 {% block app_data %}
 <span class="badge">{{ app.instance.get_aqi_display }}</span>
 {% endblock %}
-{% block app_description %}{% trans "Affiche la qualité de l'air dans votre ville" %}{% endblock %}
+{% block app_description %}{% trans "Affiche la qualité de l'air basée sur les relevés d'un capteur Lufdaten" %}{% endblock %}
