Help page updated

--- a/laboite/templates/_account_bar.html
+++ b/laboite/templates/_account_bar.html
@@ -32,7 +32,7 @@
         {% endif %}
     {% endif %}
     <li>
-        <a href="https://github.com/laboiteproject/lenuage/wiki"><i class="fa fa-question-circle"></i> {% trans "Aide" %}</a>
+        <a href="{% url 'help' %}"><i class="fa fa-question-circle"></i> {% trans "Aide" %}</a>
     </li>
 </ul>
 
