Luftdaten app updated

--- a/laboite/apps/luftdaten/templates/luftdaten_app.html
+++ b/laboite/apps/luftdaten/templates/luftdaten_app.html
@@ -2,8 +2,8 @@
 
 {% load i18n %}
 
-{% block app_icon %}home{% endblock %}
+{% block app_icon %}"></i>&#x2B22<i id="{% endblock %}
 {% block app_data %}
 <span class="badge">{{ app.instance.get_aqi_display }}</span>
 {% endblock %}
-{% block app_description %}{% trans "Affiche la qualité de l'air basée sur les relevés d'un capteur Lufdaten" %}{% endblock %}
+{% block app_description %}{% trans "Affiche la qualité de l'air basée sur les relevés d'un capteur Sensor.Community" %}{% endblock %}
